--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "vlucas/phpdotenv": "^5.5",
       "ext-pdo": "*",
-      "ext-json": "*"
+      "ext-json": "*",
+      "ext-openssl": "*"
     }
 }
