--- a/.env.exaple
+++ b/.env.exaple
@@ -1,8 +1,8 @@
-DB_MODE = 'LOCAL'
-DB_HOST = 'HOST'
-DB_USER = 'USER'
-DB_PASSWORD = 'PASSWORD'
-DB_NAME = 'NAME'
+DB_PROD_MODE = 'LOCAL'
+DB_PROD_HOST = 'HOST'
+DB_PROD_USER = 'USER'
+DB_PROD_PASSWORD = 'PASSWORD'
+DB_PROD_NAME = 'NAME'
 DB_LOCAL_HOST = 'LOCAL_HOST'
 DB_LOCAL_USER = 'LOCAL_USER'
 DB_LOCAL_PASSWORD = 'LOCAL_PASSWORD'
