--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
       "vlucas/phpdotenv": "^5.5",
       "ext-pdo": "*",
       "ext-json": "*",
-      "ext-openssl": "*"
+      "ext-openssl": "*",
+      "ext-memcache": "*"
     }
 }
