--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ DB_PROD_HOST = 'HOST'
 DB_PROD_USER = 'USER'
 DB_PROD_PASSWORD = 'PASSWORD'
 DB_PROD_NAME = 'NAME'
+DB_LOCAL_MODE = 'LOCAL'
 DB_LOCAL_HOST = 'LOCAL_HOST'
 DB_LOCAL_USER = 'LOCAL_USER'
 DB_LOCAL_PASSWORD = 'LOCAL_PASSWORD'
