--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,4 +34,12 @@ services:
   memcached:
     image: memcached:latest
     ports:
-      - "11212:11211"
+      - "11211:11211"
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - "8080:80"
+    environment:
+      PMA_ARBITRARY: 1
+    depends_on:
+      - mysql
